--- a/app/index.html
+++ b/app/index.html
@@ -16,13 +16,37 @@
   </header>
   <div class="content">
     <div class="column column-1">
-      <div class="block block-1"></div>
-      <div class="block block-2"></div>
+      <div class="block block-1">
+        <form class="map-control">
+          <label class="sr-only" for="region-select"></label>
+          <select class='panel-control' name="region" id="region-select">
+            <option value="">全国</option>
+          </select>
+          <input class='panel-control' name="search" placeholder="输入设备编号查询">
+        </form>
+      </div>
+      <div class="block block-2">
+        <div class="widget">
+          <div></div>
+        </div>
+      </div>
     </div>
     <div class="column column-2">
-      <div class="block block-3"></div>
-      <div class="block block-4"></div>
-      <div class="block block-5"></div>
+      <div class="block block-3">
+        <div class="widget">
+          <div></div>
+        </div>
+      </div>
+      <div class="block block-4">
+        <div class="widget">
+          <div></div>
+        </div>
+      </div>
+      <div class="block block-5">
+        <div class="widget">
+          <div></div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
