feat(scripts): add scripts

--- a/app/index.html
+++ b/app/index.html
@@ -43,21 +43,24 @@
       </div>
       <div class="block block-2">
         <div class="widget">
+          <header class="widget-header">用户画像</header>
           <div></div>
+          <a href="#" class="more-link">更多</a>
         </div>
       </div>
     </div>
     <div class="column column-2">
       <div class="block block-3">
         <article class="widget">
-          <header class="widget-header">服务信息</header>
           <div></div>
+          <a href="#" class="more-link">更多</a>
         </article>
       </div>
       <div class="block block-4">
         <div class="widget">
-          <header class="widget-header">用户画像</header>
+          <header class="widget-header">服务信息</header>
           <div></div>
+          <a href="#" class="more-link">更多</a>
         </div>
       </div>
       <div class="block block-5">
@@ -69,5 +72,7 @@
     </div>
   </div>
 </div>
+<script src="js/vendor.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
