feat(style): change color and border styles

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,12 @@
           <input type="search" class='panel-control' name="search" placeholder="输入设备编号查询">
         </form>
         <div class="map-container"></div>
-        <div class="device-pie-container"></div>
+        <div class="device-summary-container">
+          <div class="device-summary-item"></div>
+          <div class="device-summary-item"></div>
+          <div class="device-summary-item"></div>
+          <div class="device-summary-item"></div>
+        </div>
       </div>
       <div class="block block-2">
         <div class="widget">
