feat(layout): add two new chart containers

--- a/app/index.html
+++ b/app/index.html
@@ -117,14 +117,14 @@
       <div class="block block-4 service-view">
         <div class="widget">
           <header class="widget-header">服务信息</header>
-          <div></div>
+          <div class="service-chart-container"></div>
           <a href="#" class="more-link">更多</a>
         </div>
       </div>
       <div class="block block-5 sales-view">
         <div class="widget">
           <header class="widget-header">渠道分析</header>
-          <div></div>
+          <div class="sales-chart-container"></div>
         </div>
       </div>
     </div>
