--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="initial-scale=1">
-  <link rel="stylesheet" href="css/app.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="css/tahoe-bi.css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/sprite.css" media="screen" charset="utf-8">
 </head>
 <body>
@@ -131,6 +131,6 @@
   </div>
 </div>
 <script src="js/vendor.js"></script>
-<script src="js/app.js"></script>
+<script src="js/tahoe-bi.js"></script>
 </body>
 </html>
