refactor(view): modularize all views

--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,10 @@
             },
         ]);
         updateServiceView([53, 65, 34, 17, 32, 44, 37, 58, 28, 19, 15]);
+        updateSalesView({
+            cities: ['东营', '北京', '上海', '临汾', '鹰潭'],
+            values: [5, 8, 12, 30, 370]
+        })
     });
 </script>
 </body>
